Retrieve token update
